# CodeWriter9.0

./: #!Notes.md  .gitignore  AGENTS.md  BOOTSTRAP.md  CLAUDE.md  Cargo.toml  bridge_llm_response_retry.txt  crawl.db.pre-crawl  criterion_bindings.json  cw9  dag.json  tdd_implement_plan.py
python/: pyproject.toml  run_bridge_loop.py  run_bridge_retroactive.py  run_change_prop_loop.py  run_dep_validation_loop.py  run_impact_loop.py  run_subgraph_loop.py
python/.cw9/: dag.json
python/registry/: EntryPointDiscoveryDispatch.py  __init__.py  __main__.py  _resources.py  bindings.py  bridge.py  cli.py  composer.py  context.py  crawl_bridge.py  crawl_orchestrator.py  crawl_store.py  crawl_types.py  cw7.py  dag.py  entry_points.py  extractor.py  gwt_author.py  lang.py  lang_go.py  lang_rust.py  lang_typescript.py  loop_runner.py  one_shot_loop.py  scanner_go.py  scanner_javascript.py  scanner_python.py  scanner_rust.py  scanner_typescript.py  seam_checker.py  status.py  test_gen_loop.py  tla_compiler.py  traces.py  types.py
python/tests/: conftest.py  test_async_extract_fn.py  test_async_orchestrator.py  test_bridge.py  test_cli.py  test_cli_concurrency_flag.py  test_cmd_crawl_async.py  test_composer.py  test_concurrent_extraction.py  test_context.py  test_crawl.py  test_crawl_bridge.py  test_crawl_integration.py  test_crawl_orchestrator.py  test_cw7.py  test_dag.py  test_external_pipeline.py  test_extractor.py  test_gwt_author.py  test_lang.py  test_loop_bridge_integration.py  test_one_shot_loop.py  test_packaging.py  test_pipeline.py  test_register.py  test_register_gwt.py  (+13 more)
(+1146 files in other folders)
