[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "codewriter-registry"
version = "0.3.0"
description = "DAG-based resource registry for CodeWriter"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "build"]

[project.scripts]
cw9 = "registry.cli:main"

[tool.setuptools.package-data]
registry = [
    "_data/tools/*.jar",
    "_data/templates/pluscal/*.tla",
    "_data/templates/schema/*.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring external tools (tsc, cargo, go)",
]
