[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "codewriter-registry"
version = "0.7.0"
description = "CodeWriter 9"
requires-python = ">=3.11"
dependencies = [
"claude-agent-sdk>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "build"]
crawl = ["pydantic>=2.0"]

[project.scripts]
cw9 = "registry.cli:main"

[tool.setuptools.package-data]
registry = [
    "_data/tools/*.jar",
    "_data/templates/pluscal/*.tla",
    "_data/templates/schema/*.json",
    "_data/templates/schema_external/*.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring external tools (tsc, cargo, go)",
]
